[tool.poetry]
name = "irpf-cei"
version = "3.5.0"
description = "Programa auxiliar gratuito para calcular custos de ações, ETFs e fundos imobiliários."
authors = ["staticdev <staticdev-support@protonmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/staticdev/irpf-cei"
homepage = "https://github.com/staticdev/irpf-cei"
documentation = "https://irpf-cei.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
Changelog = "https://github.com/staticdev/irpf-cei/releases"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
click = ">=7.1.1,<9.0.0"
xlrd = ">=1.2,<3.0"
inquirer = "^2.8.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.11.29"
safety = "^1.10.0"
pytest = "^6.2.5"
mypy = "^0.930"
pytest-mock = "^3.6.1"
pyfakefs = "^4.5.3"
typeguard = "^2.13.3"
reorder-python-imports = "^2.5.0"
pre-commit = "^2.16.0"
pygments = "^2.11.0"
xdoctest = "^0.15.10"
sphinx = "^4.3.2"
sphinx-autobuild = "^2021.3.14"
darglint = "^1.8.1"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
pep8-naming = "^0.12.1"
pre-commit-hooks = "^4.1.0"
nox-poetry = "0.9.0"
coverage = {version = "6.2", extras = ["toml"]}
pyupgrade = "^2.30.1"
furo = ">=2021.11.12"

[tool.poetry.scripts]
irpf-cei = "irpf_cei.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["irpf_cei", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
